--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             </li>
             <li>Clothes
                 <ul>
-                    <li>White Shirt Plane
+                    <li>Formal White Shirt
                         <img src="./WebPhotos\whiteshirt.webp" alt="Trimmer" height="'70px" width="70px" align="center"/>
                     </li>
-                    <li>Color Shirt Plan
+                    <li>Formal Color Shirt
                         <img src="./WebPhotos\BlueShirt.jpg" alt="Trimmer" height="'100px" width="100px" align="center"/>
                     </li>
                     <li>Black Pant
@@ -60,7 +60,7 @@
                     <li>Spoon
                         <img src="./WebPhotos\Spoon.jpg" alt="Trimmer" height="'70px" width="70px" align="center"/>
                     </li>
-                    <li>Thali
+                    <li>Plate
                         <img src="./WebPhotos\Thali.jpg" alt="Trimmer" height="'70px" width="70px" align="center"/>
                     </li>
                     <li>Glass
@@ -82,7 +82,7 @@
                     <li>Thin Blanket
                         <img src="./WebPhotos\Blancket.webp" alt="Trimmer" height="'80px" width="80px" align="center"/>
                     </li>
-                    <li>Razai
+                    <li>Bed mattress
                         <img src="./WebPhotos\Razai.jpg" alt="Trimmer" height="'80px" width="80px" align="center"/>
                     </li>
                 </ul>
@@ -95,7 +95,7 @@
                     <li>Namakpare
                         <img src="./WebPhotos\NamakPare.webp" alt="Trimmer" height="'100px" width="100px" align="center"/>
                     </li>
-                    <li>Ghaati
+                    <li>Kachori
                         <img src="./WebPhotos\Kachori.jpg" alt="Trimmer" height="'100px" width="100px" align="center"/>
                     </li>
                 </ul>
@@ -130,7 +130,7 @@
                     <li>Hair Oil
                         <img src="./WebPhotos\oil.jpg" alt="Trimmer" height="'70px" width="70px" align="center"/>
                     </li>
-                    <li>SunsCream
+                    <li>Sunscreen
                         <img src="./WebPhotos\Sunscream.jpg" alt="Trimmer" height="'80px" width="80px" align="center"/>
                     </li>
                     <li>Powder
